# ghostty

./: CMakeLists.txt  ghostty.spec.rpkg  rpkg.macros
.github/workflows/: test.yml
example/c-vt-cmake-cross/: CMakeLists.txt
example/c-vt-color-scheme/: build.zig.zon
include/: ghostty-vt.h  ghostty.h
include/ghostty/: vt.h
macos/Sources/Ghostty/: SurfaceScrollView.swift
pkg/macos/: main.zig
src/: Surface.zig  apprt.zig  lib_vt.zig
src/apprt/: action.zig  embedded.zig  layout.zig
src/apprt/gtk-ng/: class.zig
src/apprt/gtk-ng/class/: surface.zig
src/apprt/gtk-ng/ui/1.2/: surface.blp
src/apprt/gtk/class/: application.zig  split_tree.zig  surface.zig  surface_scrolled_window.zig  tab.zig
src/apprt/gtk/ui/1.5/: surface-scrolled-window.blp
src/cli/: edit_config.zig  ghostty.zig
src/config/: Config.zig  command.zig
src/datastruct/: split_tree.zig
src/font/: Collection.zig
src/renderer/: Thread.zig  generic.zig  message.zig
src/simd/: vt.cpp
src/terminal/: PageList.zig  Selection.zig  Terminal.zig  highlight.zig  stream.zig
src/terminal/c/: key.zig  main.zig
src/terminal/search/: Thread.zig  viewport.zig
src/termio/: stream_handler.zig
